arama, kapak duraklatması, reklam güncellemesi...

--- a/content/dergi/sayi-0/sayi-0-ikoniksandalyeler.html
+++ b/content/dergi/sayi-0/sayi-0-ikoniksandalyeler.html
@@ -11,7 +11,7 @@ sayi=["00"]
 sayfa="06"
 yazar=["Zeynep Dag"]
 tags= [
-"ikonik", "dergi"
+"ikonik", "dergi", "charles and ray eames", "frank gehry", "arne jacobsen", "verner panton", "eero aarnio"
 ]
 +++
 
