--- a/content/dergi/sayi-1/sayi-1-içindekiler.html
+++ b/content/dergi/sayi-1/sayi-1-içindekiler.html
@@ -5,6 +5,7 @@ seotitle = "Endüstriyel Tasarım Dergisinin 1. Sayısı Markut Sayı: 1"
 description="Markut derginin yeni sayısı 1. sayı çıktı. Endüstriyel tasarım dergimizden 1. sayımızı online ücretsiz okuyabilirsiniz."
 aciklama="Kafasını yumurtadan çıkartan Markut, her sayısıyla büyüyecek ve uçmayı öğrenecektir. Gözlerinizi gökyüzünden ayırmamanızı ve yeni sayımızı keyifle okumanızı dileriz.."
 date = "2020-09-01"
+kapak="/img/sayi-1-cover.gif"
 thumb="/img/sayi-1-cover.gif"
 yazar=["Markut"]
 sayi=[
