--- a/content/dergi/sayi-2/sayi-2-ikonik-masa-lamba.html
+++ b/content/dergi/sayi-2/sayi-2-ikonik-masa-lamba.html
@@ -13,7 +13,7 @@ sayfa="05"
 yazar=["Merve Cetin", "Eylul Ecem Sogutlu"]
 type="sayfa"
 tags= [
-"anasayfa", "ikonik", "dergi"
+"anasayfa", "ikonik", "dergi", "verner panton", "wilhelm wagenfeld"
 ]
 +++
 
