--- a/content/dergi/sayi-3/sayi-3-kapak.html
+++ b/content/dergi/sayi-3/sayi-3-kapak.html
@@ -6,6 +6,7 @@ description="Markut derginin yeni sayısı 3. sayı çıktı. Endüstriyel tasar
 aciklama="\"Bauhaus bir fikirdi. Böyle bir etkiye ne bir organizasyonla, ne de propagandayla ulaşılabilir. Yanlızca bir fikrin böyle bir etki yapma gücü vardır ki, geniş yankılar uyandırabilsin.\""
 date = "2020-11-01"
 thumb="/img/markut-sayi-3-mayis-2020.png"
+kapak="/img/markut-sayi-3-mayis-2020.png"
 yazar=["Markut"]
 sayi=[
 "03"
