--- a/content/dergi/sayi-5/beyin-firtinasi/index.html
+++ b/content/dergi/sayi-5/beyin-firtinasi/index.html
@@ -16,6 +16,7 @@ tags= ["anasayfa", "dergi", "tasarim sozlugu"]
 	<div class="text-center">
 	<img src="/sayi-5/beyin-firtinasi-nedir/beyin-firtinasi-6-markut.png" alt="Tasarım Sözlüğü: Beyin Fırtınası">
 </div>
+<h2>Beyin Fırtınası Nedir?</h2>
    <div class="row mt-md-3">
       <div class="col-md-6">
          <p>
