--- a/content/dergi/sayi-5/kapak/index.html
+++ b/content/dergi/sayi-5/kapak/index.html
@@ -10,7 +10,8 @@ sayi=[
 "05"
 ]
 sayfa="00"
-thumb="/img/markut-ocak-sayi-5-animation.svg"
+kapak="/img/markut-ocak-sayi-5-animation.svg"
+thumb="/img/markut-ocak-sayi-5-sabit.png"
 type= "kapak"
 tags=[]
 +++
