--- a/content/dergi/sayi-6/kapak.html
+++ b/content/dergi/sayi-6/kapak.html
@@ -10,7 +10,8 @@ sayi=[
 "06"
 ]
 sayfa="00"
-thumb="/img/markut-subat-sayi-6-less-but-better.svg"
+kapak="/img/markut-subat-sayi-6-less-but-better.svg"
+thumb="/img/markut-subat-sayi-6-less-but-better.png"
 type= "kapak"
 tags=[]
 +++
