--- a/content/dergi/sayi-6/kitsch/index.html
+++ b/content/dergi/sayi-6/kitsch/index.html
@@ -14,6 +14,7 @@ tags= ["anasayfa", "dergi", "tasarim sozlugu"]
 +++
 
 <div class="container">
+   <h2>Kitsch Nedir?</h2>
    <div class="row">
       <div class="col-md-6">
          <p class="bg-grey p-md-3">
