--- a/content/dergi/sayi-7/ikonik-koltuklar/index.html
+++ b/content/dergi/sayi-7/ikonik-koltuklar/index.html
@@ -181,8 +181,7 @@ tags= ["anasayfa", "dergi", "ikonik"]
             uygulamayı düşünen
             <strong><em>Pesce</em></strong
             >.. O dönemde firmanın öncüsü olduğu enjekte edilmiş poliüretan
-            teknolojisi sayesinde Pesce
-            >&#39;nin fikri uygulanabilir hale getirdi. Koltuk elastik
+            teknolojisi sayesinde Pesce&#39;nin fikri uygulanabilir hale getirdi. Koltuk elastik
             kumaşlarla kaplandı ve maksimum kasılmayı sağlamak için vakumla
             paketlendi, bu da hacimde % 90&#39;a varan bir azalma sağladı. Aynı
             zamanda depoda daha az hacim ve nakliye maliyetlerinde önemli
