--- a/content/dergi/sayi-7/kapak.html
+++ b/content/dergi/sayi-7/kapak.html
@@ -10,7 +10,8 @@ sayi=[
 "07"
 ]
 sayfa="00"
-thumb="/img/mart-2021-sayi.svg"
+kapak="/img/mart-2021-sayi.svg"
+thumb="/img/mart-2021-markut-sayi-7.png"
 type= "kapak"
 tags=[]
 +++
