--- a/content/dergi/sayi-8/kapak.html
+++ b/content/dergi/sayi-8/kapak.html
@@ -10,7 +10,8 @@ sayi=[
 "08"
 ]
 sayfa="00"
-thumb="/img/markut-nisan-sayi-8-2021.svg"
+kapak="/img/markut-nisan-sayi-8-2021.svg"
+thumb="/img/markut-nisan-sayi-8-2021.png"
 type= "kapak"
 tags=[]
 +++
