--- a/content/dergi/sayi-8/metal-levha/index.html
+++ b/content/dergi/sayi-8/metal-levha/index.html
@@ -9,7 +9,7 @@ date = "2021-04-01"
 sayi=["08"]
 sayfa="02"
 yazar=["eylul ecem sogutlu"]
-tags= ["ana sayfa", "dergi"]
+tags= ["ana sayfa", "dergi", "tasarimda malzeme"]
 +++
 
 <div class="container">
