--- a/content/dergi/sayi-9/ihap-hulusi-gorey/index.html
+++ b/content/dergi/sayi-9/ihap-hulusi-gorey/index.html
@@ -9,7 +9,7 @@ date = "2021-05-05"
 sayi=["09"]
 sayfa="01"
 yazar=["zeynep yarar"]
-tags= ["ana sayfa", "dergi"]
+tags= ["ana sayfa", "dergi", "sumerbank"]
 +++
 
 <div class="container">
