--- a/content/dergi/sayi-9/kapak.html
+++ b/content/dergi/sayi-9/kapak.html
@@ -10,7 +10,8 @@ sayi=[
 "09"
 ]
 sayfa="00"
-thumb="/img/markut-sayi-9-kapak-mayis-2021.svg"
+kapak="/img/markut-sayi-9-kapak-mayis-2021.svg"
+thumb="/img/markut-sayi-9-mayis-2021.png"
 type= "kapak"
 tags=[]
 +++ 
