--- a/content/dergi/sayi-9/pop-art/index.html
+++ b/content/dergi/sayi-9/pop-art/index.html
@@ -9,7 +9,7 @@ date = "2021-05-05"
 sayi=["09"]
 sayfa="05"
 yazar=["merve cetin"]
-tags= ["ana sayfa", "dergi"]
+tags= ["ana sayfa", "dergi", "sanat akimi"]
 +++
 
 <div class="container">
