--- a/content/dergi/sayi-6/bakalit/index.html
+++ b/content/dergi/sayi-6/bakalit/index.html
@@ -9,7 +9,7 @@ date = "2021-02-05"
 sayi=["06"]
 sayfa="03"
 yazar=["zeynep yarar"]
-tags= ["anasayfa", "dergi", "tasarımda malzeme", "plastik"]
+tags= ["anasayfa", "dergi", "tasarimda malzeme", "plastik"]
 +++
 
 
