--- a/content/dergi/sayi-9/tasarim-sozlugu-kolaj/index.html
+++ b/content/dergi/sayi-9/tasarim-sozlugu-kolaj/index.html
@@ -9,7 +9,7 @@ date = "2021-05-05"
 sayi=["09"]
 sayfa="04"
 yazar=["goksu gokturk"]
-tags= ["ana sayfa", "dergi"]
+tags= ["ana sayfa", "dergi", "tasarim sozlugu"]
 +++
 
 <div class="container">
