arama yapın sayılar ve bi kaç değişiklik

--- a/content/dergi/sayi-4/sayi-4-streamline-raymond.html
+++ b/content/dergi/sayi-4/sayi-4-streamline-raymond.html
@@ -13,7 +13,7 @@ sayfa="06"
 yazar=["merve cetin"]
 type="sayfa"
 tags= [
-"anasayfa", "dergi", "streamline", "raymond loewy"
+"anasayfa", "dergi", "streamline", "raymond loewy", "sanat akimi"
 ]
 +++
 <div class="text-center">
@@ -44,7 +44,7 @@ tags= [
         </ul></div>
 </div>
 <h2>Streamline ve Raymond Loewy</h2>
-<p>1.sayımızda da kendisinden bahsettiğimiz <a href="https://www.markut.net/sayi-1/raymond-loewy/" target="_blank">(buradan inceleyebilirsiniz)</a>, Amerikan rüyasının tüketici odaklı vizyonuna yön veren, tasarımda superstarlık seviyesinde bir üne sahip olan <strong>Raymond Loewy</strong> için Streamline akımının öncüsüdür desek yanlış olmaz. Çocukluğundan beri hıza tutkun olan, defterlerini tren, gemi ve araba karamalarıyla dolduran Loewy'nin hemen her tasarımında streamline etkisi görebiliriz. Streamline ile kabuk tasarımında görüntünün toplumda eskisinden daha fazla değer gördüğünü fark eden Loewy, estetik değer ve faydalarını birçok üründe öne çıkarmaya başladı. Bunlar arasından en çarpıcı olanları; Coldspot Buzdolabı, GG-1 ve S-1 lokomotifleri, elektrikli kalem açacağı, Studeaker Avanti, Scenicruiser bus...</p>
+<p>1. sayımızda da kendisinden bahsettiğimiz Raymond Loewy'i <a href="https://www.markut.net/sayi-1/raymond-loewy/" target="_blank">buradan inceleyebilirsiniz</a>, Amerikan rüyasının tüketici odaklı vizyonuna yön veren, tasarımda superstarlık seviyesinde bir üne sahip olan <strong>Raymond Loewy</strong> için Streamline akımının öncüsüdür desek yanlış olmaz. Çocukluğundan beri hıza tutkun olan, defterlerini tren, gemi ve araba karamalarıyla dolduran Loewy'nin hemen her tasarımında streamline etkisi görebiliriz. Streamline ile kabuk tasarımında görüntünün toplumda eskisinden daha fazla değer gördüğünü fark eden Loewy, estetik değer ve faydalarını birçok üründe öne çıkarmaya başladı. Bunlar arasından en çarpıcı olanları; Coldspot Buzdolabı, GG-1 ve S-1 lokomotifleri, elektrikli kalem açacağı, Studeaker Avanti, Scenicruiser bus...</p>
 <br><br>
 <div class="row">
     <div class="col-md-4"> <img loading="lazy" src="/img/streamline-coldspot.jpg" alt=""></div>
