--- a/content/dergi/sayi-10/sozluk-mockup/index.html
+++ b/content/dergi/sayi-10/sozluk-mockup/index.html
@@ -18,7 +18,7 @@ tags= ["ana sayfa", "dergi", "tasarim sozlugu"]
       <div class="col-md-6">
           <h2 class="mt-3">Mock-up ne demek?</h2>
          <p>
-            Mock-up sözcüğü, İngilizce&#39;de
+            Mock-up sözcüğü, İngilizce bir kelime olup Türkçe'de 
             <strong>model-maket</strong> anlamına gelmektedir. Mock-uplar
             belirli bir tasarımın tüm açılardan nasıl görüneceğini yansıtmak
             için yapılır ve kullanılır.
