kapak, sozluk giriş, yapım tasarimi, mobiya

--- a/content/dergi/sayi-10/mobilya-tasarimindaki-pop-art/index.html
+++ b/content/dergi/sayi-10/mobilya-tasarimindaki-pop-art/index.html
@@ -18,7 +18,7 @@ tags= ["ana sayfa", "dergi"]
          <p>
             İngiltere&#39;de ortaya çıkmış ve başta Amerika olmak üzere tüm
             dünyayı etkisi altına almış olan Pop Art sanat akımı savaş sonrası
-            dönemde gündelik hayata nüfus eden yeni tüketim kültürünü
+            dönemde gündelik hayata nüfuz eden yeni tüketim kültürünü
             eleştirirken aynı zamanda bu kültüre ait ürünler çıkartan bir sanat
             akımıdır.
             <a href="https://www.markut.net/sayi-9/pop-art-sanat-akimi/" target="_blank"
@@ -30,7 +30,7 @@ tags= ["ana sayfa", "dergi"]
          <p>
             Aslında Pop Art, sanatsal bir akımdan çok döneminde kendi ifadesini
             bulmuş bir söylemdir desek yanılmayız. Ve bu söylemin en temel
-            özelliklerinden biri tasarım ve sanat ile arasındaki diyalogtur.
+            özelliklerinden biri tasarım ve sanat arasındaki diyalogdur.
             Sanatla birlikte mimari, iç mekan ve ürün tasarımlarında da Pop Art
             etkilerine rastlanmaktadır.
          </p>
@@ -90,7 +90,7 @@ tags= ["ana sayfa", "dergi"]
             Danimarka&#39;nın en ayırt edici tasarım kişiliklerinden biri olan
             Verner Panton, savaş sonrası dönemde ortaya çıkan yeni
             teknolojilerin, malzemelerin ve üretim sistemlerinin sunduğu
-            olanaklarını kullanmakta bir öncüydü.
+            olanakları kullanmakta bir öncüydü.
          </p>
          <blockquote>
             <p>
@@ -98,7 +98,7 @@ tags= ["ana sayfa", "dergi"]
                   >“Çoğu insan hayatını kasvetli, bej renk mekanlarda
                   geçirirlerken, genellikle renk kullanmaktan oldukça korkarlar.
                   Benim işimin başlıca amacı insanların hayal güçlerini
-                  kullanmaya ve heyecanı etraflarına sarmaktır” -Verner
+                  kullanmaya yöneltmek ve heyecanı etraflarına sarmaktır” -Verner
                   Panton</em
                >
             </p>
@@ -113,13 +113,13 @@ tags= ["ana sayfa", "dergi"]
       </div>
    </div>
 
-   <h3 id="hearth-chair">Hearth Chair</h3>
+   <h3 id="hearth-chair">Heart Chair</h3>
    <div class="row">
       <div class="col-md-6">
          <p>
             1950’lerin ortalarında Verner Panton Wolksvogen otobüsünü stüdyoya
             çevirip Avrupa’nın etrafını seyahat etmiştir. 1958’de Danimarka’ya
-            döndüğünde pek geleneklere uymayan fikirlerle dönmüştü. Bunlardan
+            döndüğünde geleneklere pek uymayan fikirlerle dönmüştü. Bunlardan
             bir tanesi de kalp şeklindeki koni sandalyeydi. Panton’un kalp
             şeklindeki fütüristik bir iz taşıyan bu tasarımı çok dikkat çeken ve
             önemli tasarımlarından bir tanesidir. Tasarımında fiberglas kabukla
@@ -257,7 +257,7 @@ tags= ["ana sayfa", "dergi"]
             referrerpolicy="no-referrer"
             alt="Tube-Cahir-Joe-Colombo-drawing.jpg"
          >}}
-         <small>Joe Colombo&#39;nun eskizleri</small>
+        <br> <small>Joe Colombo&#39;nun eskizleri</small>
       </div>
    </div>
 
@@ -404,7 +404,7 @@ tags= ["ana sayfa", "dergi"]
             mücevheri haline gelmiştir.
          </p>
          <p>
-            Bocca Sofa hakkında daha fazla bilgiye 7.sayımızdaki
+            Bocca Sofa hakkında daha fazla bilgiye 7. sayımızdaki
             <a
                href="https://www.markut.net/sayi-7/ikonik-tasarimlar-koltuk/"
                target="_blank"
@@ -558,9 +558,9 @@ tags= ["ana sayfa", "dergi"]
       <div class="col-md-4">
          <h3 id="pratone-chair" class="mt-1">Pratone Chair</h3>
          <p>
-            Aralarına dalıp yatabileceğimiz uzun yeşil saplar, alışılmamış bir
-            koltuk, geleneksel değerlerinin dışında bir şezlong, kasıtlı olarak
-            orantısız bir bahçe parçası.
+            Aralarına dalıp yatabileceğimiz kasıtlı olarak orantısız
+            uzun yeşil sapları ile alışılmamış bir koltuk,
+            geleneksel değerlerin dışında bir şezlong ve bir bahçe parçasıdır.
          </p>
          <p>
             Gufram tarafından üretilen Pratone Chair&#39;ı oluşturan büyük çim
