--- a/content/dergi/sayi-10/yapim-tasarimi/index.html
+++ b/content/dergi/sayi-10/yapim-tasarimi/index.html
@@ -64,14 +64,13 @@ tags= ["ana sayfa", "dergi"]
 
          <blockquote>
             <p>
-               &quot;Yapım tasarımcısı, setler için fikirler bulur ve bazı
-               çizimler ve eskizler yapar. Yönetmenin bazı fikirleri olacak,
-               tıpkı ABD&#39;deki bazı adamlarının da bazı eskizlerini ortaya
-               çıkaran George Lucas&#39;ın durumunda olduğu gibi. Setlerin nihai
-               uygulaması yapım tasarımcısının sorumluluğundadır. Sanat
-               yönetmeni, tasarımların yürütülmesine yardımcı olur çünkü bazen
-               tasarımcının çeşitli yerleri görmek için seyahat etmesi gerekir.
-               Bir Sanat Yönetmeni temelde yapım tasarımcısının sağ koludur.” -
+               "Yapım tasarımcısı, setler için fikirler bulur ve bazı
+                çizimler ve eskizler yapar. Yönetmenin bazı fikirleri olacağından,
+               bizim durumumuzda George Lucas idi, kendisinin çalıştığı insanlar
+               da birkaç eskizle çıkageldi. Setlerin nihai uygulaması yapım tasarımcısının
+               sorumluluğundadır. Sanat yönetmeni... tasarımların yürütülmesine
+               yardımcı olur çünkü bazen tasarımcının çeşitli yerleri görmek için
+               seyahat etmesi gerekir. Bir Sanat Yönetmeni temelde yapım tasarımcısının sağ koludur.” -
                Norman Reynolds, Yıldız Savaşları IV sanat yönetmeni, Yıldız
                Savaşları V yapım tasarımcısı.
             </p>
