--- a/content/dergi/sayi-10/resolute-desk/index.html
+++ b/content/dergi/sayi-10/resolute-desk/index.html
@@ -156,7 +156,7 @@ tags= ["ana sayfa", "dergi"]
             Ön orta çekmeceye monte edilmiş masanın arkasındaki bir levha
             Resolute&#39;un tarihini ve anlamı açıklıyor. Bu plak orijinal
             olarak masanın arkasındaydı ancak bir noktada öne taşındı. Tüm dış
-            çekmece cephelerinin alt tarafına &quot;MORANT BOYD &amp; BLANFORD /
+            çekmece cephelerinin alt tarafında &quot;MORANT BOYD &amp; BLANFORD /
             91 NEW BOND STREET&quot; ve kilit plakaları &quot;ROYAL / LETTERS
             PATENT / FOUR LEVERS / SAFETY LOCK / COMYN CHINC &amp; Co.&quot;
             yazıları damgalıdır.
@@ -164,14 +164,13 @@ tags= ["ana sayfa", "dergi"]
          <p>
             Franklin D. Roosevelt, masayı değiştiren ilk başkandı. Roosevelt
             çocuk felci teşhisi için giydiği bacak tellerini saklamak için çöp
-            kutuları kullanmak yerine masanın diz deliğine menteşeli bir panel
+            kutuları kullanmak yerine masanın diz boşluğuna menteşeli bir panel
             yerleştirdi. Roosevelt&#39;in gizli kapısı oyma bir başkanlık mührü
             ile işlendi. Bu, Truman&#39;ın kartalı bir barış işareti olarak
-            zeytin dallarına çevirme kararından önceydi. Başkan Truman
-            1945&#39;te göreve geldiğinde bu paneli resmi olarak taktırmıştı ve
-            Resolute&#39;un paneli zeytin dallarının yerine savaş oklarına bakan
-            kartala sahip birkaç Beyaz Saray mühürler biri olmaya devam
-            etmektedir.
+            zeytin dallarına çevirme kararından önceydi. Başkan Truman 1945'te
+            göreve geldiğinde bu paneli resmi olarak taktırmıştı ve Resolute'un
+             paneli zeytin dalları yerine, savaş oklarına bakan kartal
+              Beyaz Saray mühürlerinden biri olmaya devam etmektedir.
          </p>
       </div>
    </div>
