--- a/content/dergi/sayi-10/yapim-tasarimi/index.html
+++ b/content/dergi/sayi-10/yapim-tasarimi/index.html
@@ -2,7 +2,7 @@
 title = "Yapım Tasarımı: Filmlerin Görsel Dili"
 description=""
 url="sayi-10/yapim-tasarimi-filmlerin-gorsel-dili"
-aciklama="Yapım tasarımcısı, setler için fikirler bulur ve bazı çizimler ve eskizler yapar. Yönetmenin bazı fikirleri olacak, tıpkı ABD'deki bazı adamlarının da bazı eskizlerini ortaya çıkaran George Lucas'ın durumunda olduğu gibi. Setlerin nihai uygulaması yapım tasarımcısının sorumluluğundadır."
+aciklama="Yapım tasarımcısı, setler için fikirler bulur ve bazı çizimler ve eskizler yapar. Yönetmenin bazı fikirleri olacağından, bizim durumumuzda George Lucas idi, kendisinin çalıştığı insanlar da birkaç eskizle çıkageldi. Setlerin nihai uygulaması yapım tasarımcısının sorumluluğundadır."
 type="sayfa"
 thumb="/img/yapim-tasarimi-thumbnail.jpg"
 date = "2021-06-04"
