--- a/content/dergi/sayi-0/sayi-0-giris.html
+++ b/content/dergi/sayi-0/sayi-0-giris.html
@@ -20,12 +20,14 @@ tags= [
       yanlış bulunularak yapılardan söz edilmeye başlanmıştır. Ancak bu temelde
       doğru sayılsa bile bir yaratım yalnız geometri yahut süsleme değildir. Bu
       noktada esas kaynak olan doğaya inerek gözlemlerimizi artırarak nihai
-      hedefimize ulaşmış olacağız. Görüneni iki veya üç boyutlu aktarmak bir
+      hedefimize ulaşmış olacağız. <br><br>
+      Görüneni iki veya üç boyutlu aktarmak bir
       hedef değil. Ancak formun neden biçim aldığını ve biçim alışındaki
       etmenleri analiz ederek bir sonraki aşamaya geçebiliriz. Bu hususta ana
       unsurumuz olan temel geometrik formlar, yaptığımız işlemi gerçekleştirmede
       birer araç olarak ele alınacak; geleneksel yöntemlerle çalışırken
       teknolojik olanaklardan maksimum doğrultuda yararlanılarak ilerlenecektir.
+      <br><br>
       Bir tasarımın oluşumu doğrultusunda geçmişten alınan tüm birikim
       değerlendirilerek çalışmanın yanı sıra en gerçek yaratımın analizi
       yapılacaktır. Buradan alınan bilgiler doğrultusunda günümüz dünyasına
