--- a/content/dergi/sayi-11/dustbuster/index.html
+++ b/content/dergi/sayi-11/dustbuster/index.html
@@ -254,7 +254,7 @@ tags= ["ana sayfa", "dergi"]
     <small>      &#39;Blast from the Past&#39; pazarlamacısı, Marty&#39;ye 2015&#39;de
       DustBuster&#39;ı gösteriyor.</small></div>
     <div class="col-md-4"><video controls class="mt-md-2" width="100%">
-        <source src="dustbuster-back-the-future-film-sahnesi.mp4" >
+        <source src="https://www.markut.net/sayi-11/ilk-el-tipi-sarjli-supurge-dustbuster/dustbuster-back-the-future-film-sahnesi.mp4" >
      </video>
 <small> &quot;...and if you&#39;re interested in dust, we have a quaint little
     piece from the 1980s – it&#39;s called a DustBuster.&quot;</small>
