--- a/content/dergi/sayi-5/ikonik-tasarimlar-lego/index.html
+++ b/content/dergi/sayi-5/ikonik-tasarimlar-lego/index.html
@@ -216,8 +216,7 @@ tags= ["anasayfa", "dergi", "ikonik"]
             şirketleri arasında başka bir örneği olmayan bu durum LEGO için
             riskli bir işletme modeli olsa da 1958 yılında üretilen bir tuğla
             parçasının günümüzdekiyle uyumlu olması harika bir
-            <strong>sistem</strong>
-            .
+            sistem.
          </p>
          <p>
             Godtfred Kırk Christiansen başa geçtiğinde LEGO büyümekteydi. Tüm
@@ -277,12 +276,10 @@ tags= ["anasayfa", "dergi", "ikonik"]
       <div class="col-md-4">
          <p>
             Kjeld, 70’lerin sonunda şirketin başına geçtiğinde çok iyi bir fikir
-            üretti;
-            <strong>Mini figürler.</strong>
+            üretti; Mini figürler.
             LEGO için muazzam bir şeydi. Mini figürlerin dört LEGO boyutunda
             olması kasaba planlarına çok uyumluydu. Yani
-            <strong>sistem</strong>
-            e çok iyi uyuyordu.
+            sisteme çok iyi uyuyordu.
          </p>
          {{<img src="ikonik-tasarimlar-lego-37-markut.jpg" alt="İkonik Tasarımlar: Lego" >}}
       </div>
