--- a/content/dergi/sayi-5/minimalizm/index.html
+++ b/content/dergi/sayi-5/minimalizm/index.html
@@ -256,25 +256,21 @@ tags= ["anasayfa", "dergi", "surdurulebilir tasarim", "ekoloji", "sanat akimi"]
 </div>
 
 
-<p>Kaynaklar:</p>
+<strong>Kaynaklar:</strong>
+<small>
 <p>
    <p>
       https://www.ecomena.org/minimalism-and-sustainability/ [1]</p>
 </p>
 <p>
-   <strong>Döl</strong>
-   , Atilla,
-   <strong>Avşar</strong>
-   , Pelin, Minimalizm Akımı Kapsamında Nesne Anlayışının Yeniden
+    Atilla, Avşar, Döl, Pelin, Minimalizm Akımı Kapsamında Nesne Anlayışının Yeniden
    Değerlendirilmesi, 02-10-01, İdil Dergisi
 </p>
 <p>
-   <strong>Dağ</strong>
-   , Melek, 2020,Tüketim Kültürü Bağlamında Bir Yaşam Tarzı Olarak Minimalizm
+   Dağ, Melek, 2020,Tüketim Kültürü Bağlamında Bir Yaşam Tarzı Olarak Minimalizm
 </p>
 <p>
-   <strong>Ertürk</strong>
-   , Müge, 2011 Minimalizmin Doğuşu ve Mimaride Biçim Açısından Minimalizmin
+   Ertürk, Müge, 2011 Minimalizmin Doğuşu ve Mimaride Biçim Açısından Minimalizmin
    Değerlendirmesi
-</p>
+</p></small>
 </div>
