--- a/content/dergi/sayi-11/mini-ikonik-arabalar/index.html
+++ b/content/dergi/sayi-11/mini-ikonik-arabalar/index.html
@@ -307,7 +307,7 @@ tags= ["ana sayfa", "dergi", "ikonik"]
 
          <small>1965, bir Mini yarış arabası</small> <br /><br />
          {{<img
-            src="mini-yaris-arabasi.jpg"
+            src="ikonik-mini-yaris-arabasi.jpg"
             referrerpolicy="no-referrer"
             alt="Mini yarış arabası"
        >}}
